--- a/TraaaaBot.console/renderer/TraaaaBot.console.main/css/dialogs.css
+++ b/TraaaaBot.console/renderer/TraaaaBot.console.main/css/dialogs.css
@@ -26,6 +26,20 @@
     opacity: 0;
 }
 
+#offline-dialog {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+}
+
 #blacklist-ip-dialog.fade-in {
     opacity: 1;
 }
